--- a/app/src/main/res/drawable/background_bottom_sheet.xml
+++ b/app/src/main/res/drawable/background_bottom_sheet.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white_gray"> </solid>
-    <corners android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
+    <solid android:color="@color/white"> </solid>
+    <corners android:topLeftRadius="24dp"
+        android:topRightRadius="24dp"/>
 </shape>
