--- a/app/src/main/res/layout/fragment_comment_list_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_comment_list_bottom_sheet_dialog.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".ui.fragment.comment.placeholder.CommentListBottomSheetDialog">
 
+
+    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
