--- a/app/src/main/res/menu/pf_edit_picture.xml
+++ b/app/src/main/res/menu/pf_edit_picture.xml
@@ -7,7 +7,7 @@
 
     <item android:id="@+id/camera"
         android:title="@string/camera"
-        android:icon="@drawable/ic_white_video"
+        android:icon="@drawable/ic_camera"
         />
 
     <item android:id="@+id/bookmarkFragment"
