--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SocialMediaApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.SocialMediaApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
@@ -8,6 +8,11 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your theme here -->
     </style>
+
+    <style
+        name="BottomSheetDialog" parent="Theme.Material3.DayNight.NoActionBar">
+    </style>
+
 
     <style name="Theme.SocialMediaApp" parent="Base.Theme.SocialMediaApp" />
 
