set image as default

--- a/app/src/main/res/layout/fragment_edit_profile_picture_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_edit_profile_picture_bottom_sheet_dialog.xml
@@ -41,10 +41,9 @@
         android:id="@+id/user_pfp"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_margin="5dp"
         android:src="@drawable/milet_pfp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         />
 
