--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.main.PostFragment"
+    android:id="@+id/post_scroll_view"
     >
 
     <androidx.recyclerview.widget.RecyclerView
