--- a/app/src/main/res/menu/pf_edit_picture.xml
+++ b/app/src/main/res/menu/pf_edit_picture.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/library"
         android:title="@string/choose_from_library"
-        android:icon="@drawable/ic_white_grid"
+        android:icon="@drawable/ic_gallery"
         />
 
     <item android:id="@+id/camera"
@@ -10,9 +10,9 @@
         android:icon="@drawable/ic_camera"
         />
 
-    <item android:id="@+id/bookmarkFragment"
-        android:title="@string/remove_your_current_picture"
-        android:icon="@drawable/ic_pf_bookmark"
+    <item android:id="@+id/set_default"
+        android:title="@string/set_default_profile_picture"
+        android:icon="@drawable/ic_user_avatar"
         />
 
 </menu>
