slide animation for main bottom navigation

--- a/app/src/main/res/navigation/edit_profile_nav.xml
+++ b/app/src/main/res/navigation/edit_profile_nav.xml
@@ -15,28 +15,28 @@
             app:destination="@id/editNameFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_to_left"
-            app:popEnterAnim="@anim/silde_in_left"
+            app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_to_right" />
         <action
             android:id="@+id/action_editProfile_to_editBioFragment"
             app:destination="@id/editBioFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_to_left"
-            app:popEnterAnim="@anim/silde_in_left"
+            app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_to_right" />
         <action
             android:id="@+id/action_editProfile_to_editUserNameFragment"
             app:destination="@id/editUserNameFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_to_left"
-            app:popEnterAnim="@anim/silde_in_left"
+            app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_to_right" />
         <action
             android:id="@+id/action_editProfile_to_editGenderFragment"
             app:destination="@id/editGenderFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_to_left"
-            app:popEnterAnim="@anim/silde_in_left"
+            app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_to_right" />
         <action
             android:id="@+id/action_editProfile_to_editProfilePictureBottomSheetDialog"
