--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.socialmediaapp.ui.fragment.main.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_commentListBottomSheetDialog"
+            app:destination="@id/commentListBottomSheetDialog" />
+    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.socialmediaapp.ui.fragment.main.SearchFragment"
