--- a/app/src/main/res/layout/comment.xml
+++ b/app/src/main/res/layout/comment.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -22,86 +23,132 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:text="@string/reo_peko"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                />
-
-            <TextView
-                android:id="@+id/user_comment"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/comment"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="20dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                />
+                android:layout_marginEnd="20dp"
+                app:cardCornerRadius="20dp"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white_gray"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="5dp"
+                        android:text="@string/reo_peko"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        />
+
+                    <TextView
+                        android:id="@+id/user_comment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/comment"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginBottom="8dp"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        />
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="20dp"
                 android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/like"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:scaleType="centerCrop"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:src="@drawable/ic_heart"/>
+<!--                <androidx.appcompat.widget.AppCompatImageButton-->
+<!--                    android:id="@+id/like"-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:layout_marginBottom="10dp"-->
+<!--                    android:background="?attr/selectableItemBackground"-->
+<!--                    android:scaleType="fitCenter"-->
+<!--                    android:src="@drawable/ic_heart" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/like_number"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:textSize="17sp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/black"/>
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="@string/like_number"-->
+<!--                    android:layout_marginStart="5dp"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:layout_gravity="center_vertical"-->
+<!--                    android:textColor="@color/black"/>-->
+
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/comment_layout"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:layout_marginBottom="10dp"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    >-->
+
+<!--                    <androidx.appcompat.widget.AppCompatImageButton-->
+<!--                        android:id="@+id/comment"-->
+<!--                        android:layout_width="30dp"-->
+<!--                        android:layout_height="30dp"-->
+<!--                        android:background="?attr/selectableItemBackground"-->
+<!--                        android:scaleType="fitCenter"-->
+<!--                        android:src="@drawable/ic_comment"/>-->
+
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="@string/comment_number"-->
+<!--                        android:layout_marginStart="5dp"-->
+<!--                        android:textSize="14sp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:textColor="@color/black"/>-->
+
+<!--                </LinearLayout>-->
 
                 <LinearLayout
-                    android:id="@+id/comment_layout"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginEnd="5dp"
-                    >
-
-                    <androidx.appcompat.widget.AppCompatImageButton
-                        android:id="@+id/comment"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:background="?attr/selectableItemBackground"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_comment"/>
+                    android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/like"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/comment_number"
-                        android:layout_marginStart="5dp"
-                        android:textSize="17sp"
-                        android:layout_gravity="center_vertical"
-                        android:textColor="@color/black"/>
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="10dp"
+                        android:textSize="12sp"
+                        android:text="@string/like_comment"/>
+
+
+                    <TextView
+                        android:id="@+id/timestamp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="10dp"
+                        android:textSize="12sp"
+                        android:text="1d"/>
 
                 </LinearLayout>
-
 
 
             </LinearLayout>
