--- a/app/src/main/res/layout/chat_box_left.xml
+++ b/app/src/main/res/layout/chat_box_left.xml
@@ -31,9 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:text="@string/timestamp"
+        android:layout_gravity="center_vertical"
         />
 
 </LinearLayout>
