--- a/app/src/main/res/layout/chat_box_right.xml
+++ b/app/src/main/res/layout/chat_box_right.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:text="@string/timestamp"
+        android:layout_gravity="center_vertical"
         />
 
 
