--- a/app/src/main/res/layout/fragment_chat_room.xml
+++ b/app/src/main/res/layout/fragment_chat_room.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ChatRoomFragment">
+    tools:context=".ui.fragment.chat.ChatRoomFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
             android:scaleType="centerCrop"
             android:id="@+id/back"
             android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
             />
 
         <de.hdodenhof.circleimageview.CircleImageView
