--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -185,6 +185,7 @@
         >
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/google_sign_in_btn"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:background="@drawable/rounded_sign_in_opt"
@@ -194,6 +195,7 @@
             />
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/faceboox_log_in_btn"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:background="@drawable/rounded_sign_in_opt"
@@ -204,6 +206,7 @@
             android:layout_marginEnd="20dp"
             />
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/x_log_in_btn"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:background="@drawable/rounded_sign_in_opt"
