--- a/app/src/main/res/navigation/edit_profile_nav.xml
+++ b/app/src/main/res/navigation/edit_profile_nav.xml
@@ -85,7 +85,7 @@
         tools:layout="@layout/fragment_edit_profile_picture_bottom_sheet_dialog" >
         <argument
             android:name="user"
-            app:argType="com.example.socialmediaapp.data.entity.User"
+            app:argType="com.example.socialmediaapp.data.entity.user.User"
             app:nullable="true" />
     </dialog>
 </navigation>
